src/test/ui/lifetime_starts_expressions.stderr
error: expected identifier, found keyword `loop`
  --> $DIR/lifetime_starts_expressions.rs:6:26
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                          ^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     loop { break 'label: r#loop { break 'label 42; }; }
   |                          ^^^^^^

error: expected type, found keyword `loop`
  --> $DIR/lifetime_starts_expressions.rs:6:26
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                          ^^^^ expecting a type here because of type ascription
   |
   = note: type ascription is a nightly only feature that lets you annotate expressions with a type: `<expr>: <type>`
note: this expression is annotated with type ascription...
  --> $DIR/lifetime_starts_expressions.rs:6:12
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |            ^^^^^^^^^^^^
note: ...due to this, which is why a type is expected after
  --> $DIR/lifetime_starts_expressions.rs:6:24
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                        ^
   = help: this might be indicative of a syntax error elsewhere

error: aborting due to 2 previous errors

